--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
       "pre-commit": "pretty-quick --staged"
     }
   },
-  "dependencies": {},
+  "dependencies": {
+    "rxjs": "^6.4.0"
+  },
   "devDependencies": {
     "@types/jest": "^24.0.2",
     "husky": "^1.3.1",
