--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
       "pre-commit": "pretty-quick --staged"
     }
   },
+  "scripts": {
+    "lint": "tslint -p tsconfig.json",
+    "test": "jest"
+  },
   "dependencies": {
     "rxjs": "^6.4.0"
   },
@@ -18,6 +22,7 @@
     "@types/jest": "^24.0.2",
     "husky": "^1.3.1",
     "jest": "^24.1.0",
+    "jest-localstorage-mock": "^2.4.0",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
     "ts-jest": "^23.10.5",
