--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-recipes",
+  "name": "my-cookbook",
   "version": "0.0.1",
   "description": "A Web App to help manage your personal cooking recipes.",
   "main": "index.js",
